[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[sub_resource type="InputEventAction" id=5]
action = "frog_up"
pressed = true

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "frog_down"
pressed = true

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "ui_select"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Ascend" type="Button" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 72.0
shortcut = SubResource( 6 )
text = "Up (q)"

[node name="Descend" type="Button" parent="."]
margin_left = 16.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 120.0
shortcut = SubResource( 8 )
text = "Down (a)"

[node name="Up" type="Button" parent="."]
margin_left = 72.0
margin_top = 312.0
margin_right = 120.0
margin_bottom = 344.0
text = "^"

[node name="Down" type="Button" parent="."]
margin_left = 72.0
margin_top = 376.0
margin_right = 120.0
margin_bottom = 408.0
text = "v"

[node name="Right" type="Button" parent="."]
margin_left = 128.0
margin_top = 344.0
margin_right = 176.0
margin_bottom = 376.0
keep_pressed_outside = true
text = ">"

[node name="Left" type="Button" parent="."]
margin_left = 16.0
margin_top = 344.0
margin_right = 64.0
margin_bottom = 376.0
keep_pressed_outside = true
text = "<"

[node name="Properties" type="VFlowContainer" parent="."]
margin_left = 128.0
margin_top = 32.0
margin_right = 528.0
margin_bottom = 312.0
mouse_filter = 2

[node name="Level" type="Label" parent="."]
margin_left = 16.0
margin_top = 152.0
margin_right = 85.0
margin_bottom = 182.0
text = "Level: 1"

[node name="Top" type="Label" parent="Level"]
margin_top = -24.0
margin_right = 42.0
margin_bottom = 6.0
text = "TOP"

[node name="Line2D" type="Line2D" parent="Level/Top"]
position = Vector2( 0, 8 )
points = PoolVector2Array( 64, 0, 0, 0 )
width = 2.0
default_color = Color( 0.988235, 1, 0.87451, 1 )

[node name="Floor" type="Label" parent="Level"]
margin_top = 24.0
margin_right = 70.0
margin_bottom = 54.0
text = "FLOOR"

[node name="Line2D2" type="Line2D" parent="Level/Floor"]
position = Vector2( 0, -48 )
points = PoolVector2Array( 72, 72, 0, 72 )
width = 2.0
default_color = Color( 0.988235, 1, 0.87451, 1 )

[node name="DL" type="Button" parent="."]
margin_left = 24.0
margin_top = 384.0
margin_right = 64.0
margin_bottom = 416.0

[node name="DR" type="Button" parent="."]
margin_left = 128.0
margin_top = 384.0
margin_right = 168.0
margin_bottom = 416.0

[node name="UR" type="Button" parent="."]
margin_left = 128.0
margin_top = 304.0
margin_right = 168.0
margin_bottom = 336.0

[node name="UL" type="Button" parent="."]
margin_left = 24.0
margin_top = 304.0
margin_right = 64.0
margin_bottom = 336.0

[node name="RebuildNest" type="Button" parent="."]
visible = false
margin_left = 16.0
margin_top = 448.0
margin_right = 232.0
margin_bottom = 488.0
shortcut = SubResource( 10 )
text = "Rebuild Nest (space)"

[connection signal="pressed" from="Ascend" to="." method="_on_Ascend_pressed"]
[connection signal="pressed" from="Descend" to="." method="_on_Descend_pressed"]
[connection signal="button_down" from="Up" to="." method="_on_Up_button_down"]
[connection signal="button_up" from="Up" to="." method="_on_Up_button_up"]
[connection signal="button_down" from="Down" to="." method="_on_Down_button_down"]
[connection signal="button_up" from="Down" to="." method="_on_Down_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
[connection signal="button_down" from="Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="DL" to="." method="_on_DL_button_down"]
[connection signal="button_up" from="DL" to="." method="_on_DL_button_up"]
[connection signal="button_down" from="DR" to="." method="_on_DR_button_down"]
[connection signal="button_up" from="DR" to="." method="_on_DR_button_up"]
[connection signal="button_down" from="UR" to="." method="_on_UR_button_down"]
[connection signal="button_up" from="UR" to="." method="_on_UR_button_up"]
[connection signal="button_down" from="UL" to="." method="_on_UL_button_down"]
[connection signal="button_up" from="UL" to="." method="_on_UL_button_up"]
[connection signal="pressed" from="RebuildNest" to="." method="_on_RebuildNest_pressed"]
